etc/ui.for_clang_parse.h


typedef unsigned int uiForEach;
 void uiQueueMain(void (*f)(void *data), void *data);
 void uiTimer(int milliseconds, int (*f)(void *data), void *data);
 void uiOnShouldQuit(int (*f)(void *data), void *data);
typedef struct uiControl uiControl;
struct uiControl {
	uint32_t Signature;
	uint32_t OSSignature;
	uint32_t TypeSignature;
	void (*Destroy)(uiControl *);
	uintptr_t (*Handle)(uiControl *);
	uiControl *(*Parent)(uiControl *);
	void (*SetParent)(uiControl *, uiControl *);
	int (*Toplevel)(uiControl *);
	int (*Visible)(uiControl *);
	void (*Show)(uiControl *);
	void (*Hide)(uiControl *);
	int (*Enabled)(uiControl *);
	void (*Enable)(uiControl *);
	void (*Disable)(uiControl *);
};
#define uiControl(this) ((uiControl *) (this))
typedef struct uiWindow uiWindow;
 void uiWindowOnContentSizeChanged(uiWindow *w, void (*f)(uiWindow *, void *), void *data);
 void uiWindowOnClosing(uiWindow *w, int (*f)(uiWindow *w, void *data), void *data);
typedef struct uiButton uiButton;
 void uiButtonOnClicked(uiButton *b, void (*f)(uiButton *b, void *data), void *data);
typedef struct uiCheckbox uiCheckbox;
 void uiCheckboxOnToggled(uiCheckbox *c, void (*f)(uiCheckbox *c, void *data), void *data);
typedef struct uiEntry uiEntry;
 void uiEntryOnChanged(uiEntry *e, void (*f)(uiEntry *e, void *data), void *data);
typedef struct uiSpinbox uiSpinbox;
 void uiSpinboxOnChanged(uiSpinbox *s, void (*f)(uiSpinbox *s, void *data), void *data);
typedef struct uiSlider uiSlider;
 void uiSliderOnChanged(uiSlider *s, void (*f)(uiSlider *s, void *data), void *data);
typedef struct uiCombobox uiCombobox;
 void uiComboboxOnSelected(uiCombobox *c, void (*f)(uiCombobox *c, void *data), void *data);
typedef struct uiEditableCombobox uiEditableCombobox;
 void uiEditableComboboxOnChanged(uiEditableCombobox *c, void (*f)(uiEditableCombobox *c, void *data), void *data);
typedef struct uiRadioButtons uiRadioButtons;
 void uiRadioButtonsOnSelected(uiRadioButtons *r, void (*f)(uiRadioButtons *, void *), void *data);
typedef struct uiDateTimePicker uiDateTimePicker;
 void uiDateTimePickerOnChanged(uiDateTimePicker *d, void (*f)(uiDateTimePicker *, void *), void *data);
typedef struct uiMultilineEntry uiMultilineEntry;
 void uiMultilineEntryOnChanged(uiMultilineEntry *e, void (*f)(uiMultilineEntry *e, void *data), void *data);
typedef struct uiMenuItem uiMenuItem;
 void uiMenuItemOnClicked(uiMenuItem *m, void (*f)(uiMenuItem *sender, uiWindow *window, void *data), void *data);
typedef struct uiAreaMouseEvent uiAreaMouseEvent;
typedef struct uiAreaKeyEvent uiAreaKeyEvent;
typedef struct uiDrawContext uiDrawContext;
typedef struct uiAttribute uiAttribute;
typedef struct uiAttributedString uiAttributedString;
typedef uiForEach (*uiAttributedStringForEachAttributeFunc)(const uiAttributedString *s, const uiAttribute *a, size_t start, size_t end, void *data);
 size_t uiAttributedStringLen(const uiAttributedString *s);
 void uiAttributedStringAppendUnattributed(uiAttributedString *s, const char *str);
 void uiAttributedStringInsertAtUnattributed(uiAttributedString *s, const char *str, size_t at);
 void uiAttributedStringDelete(uiAttributedString *s, size_t start, size_t end);
 void uiAttributedStringSetAttribute(uiAttributedString *s, uiAttribute *a, size_t start, size_t end);
 void uiAttributedStringForEachAttribute(const uiAttributedString *s, uiAttributedStringForEachAttributeFunc f, void *data);
 size_t uiAttributedStringNumGraphemes(uiAttributedString *s);
 size_t uiAttributedStringByteIndexToGrapheme(uiAttributedString *s, size_t pos);
 size_t uiAttributedStringGraphemeToByteIndex(uiAttributedString *s, size_t pos);
typedef struct uiFontDescriptor uiFontDescriptor;
struct uiFontDescriptor {
	char *Family;
	double Size;
	uiTextWeight Weight;
	uiTextItalic Italic;
	uiTextStretch Stretch;
};
typedef struct uiDrawTextLayout uiDrawTextLayout;
typedef struct uiDrawTextLayoutParams uiDrawTextLayoutParams;
struct uiDrawTextLayoutParams {
	uiAttributedString *String;
	uiFontDescriptor *DefaultFont;
	double Width;
	uiDrawTextAlign Align;
};
 uiDrawTextLayout *uiDrawNewTextLayout(uiDrawTextLayoutParams *params);
 void uiDrawFreeTextLayout(uiDrawTextLayout *tl);
 void uiDrawText(uiDrawContext *c, uiDrawTextLayout *tl, double x, double y);
 void uiDrawTextLayoutExtents(uiDrawTextLayout *tl, double *width, double *height);
typedef struct uiFontButton uiFontButton;
#define uiFontButton(this) ((uiFontButton *) (this))
 void uiFontButtonFont(uiFontButton *b, uiFontDescriptor *desc);
 void uiFontButtonOnChanged(uiFontButton *b, void (*f)(uiFontButton *, void *), void *data);
 uiFontButton *uiNewFontButton(void);
 void uiFreeFontButtonFont(uiFontDescriptor *desc);
struct uiAreaMouseEvent {
	double X;
	double Y;
	double AreaWidth;
	double AreaHeight;
	int Down;
	int Up;
	int Count;
	uiModifiers Modifiers;
	uint64_t Held1To64;
};
struct uiAreaKeyEvent {
	char Key;
	uiExtKey ExtKey;
	uiModifiers Modifier;
	uiModifiers Modifiers;
	int Up;
};
typedef struct uiColorButton uiColorButton;
#define uiColorButton(this) ((uiColorButton *) (this))
 void uiColorButtonColor(uiColorButton *b, double *r, double *g, double *bl, double *a);
 void uiColorButtonSetColor(uiColorButton *b, double r, double g, double bl, double a);
 void uiColorButtonOnChanged(uiColorButton *b, void (*f)(uiColorButton *, void *), void *data);
 uiColorButton *uiNewColorButton(void);
typedef struct uiForm uiForm;
#define uiForm(this) ((uiForm *) (this))
 void uiFormAppend(uiForm *f, const char *label, uiControl *c, int stretchy);
 void uiFormDelete(uiForm *f, int index);
 int uiFormPadded(uiForm *f);
 void uiFormSetPadded(uiForm *f, int padded);
 uiForm *uiNewForm(void);
typedef struct uiGrid uiGrid;
#define uiGrid(this) ((uiGrid *) (this))
 void uiGridAppend(uiGrid *g, uiControl *c, int left, int top, int xspan, int yspan, int hexpand, uiAlign halign, int vexpand, uiAlign valign);
 void uiGridInsertAt(uiGrid *g, uiControl *c, uiControl *existing, uiAt at, int xspan, int yspan, int hexpand, uiAlign halign, int vexpand, uiAlign valign);
 int uiGridPadded(uiGrid *g);
 void uiGridSetPadded(uiGrid *g, int padded);
 uiGrid *uiNewGrid(void);
typedef struct uiImage uiImage;
 uiImage *uiNewImage(double width, double height);
 void uiFreeImage(uiImage *i);
 void uiImageAppend(uiImage *i, void *pixels, int pixelWidth, int pixelHeight, int byteStride);
typedef struct uiTableValue uiTableValue;
 void uiFreeTableValue(uiTableValue *v);
 uiTableValueType uiTableValueGetType(const uiTableValue *v);
typedef struct uiTableModel uiTableModel;
typedef struct uiTableModelHandler uiTableModelHandler;
struct uiTableModelHandler {
	int (*NumColumns)(uiTableModelHandler *, uiTableModel *);
	uiTableValueType (*ColumnType)(uiTableModelHandler *, uiTableModel *, int);
	int (*NumRows)(uiTableModelHandler *, uiTableModel *);
	uiTableValue *(*CellValue)(uiTableModelHandler *mh, uiTableModel *m, int row, int column);
	void (*SetCellValue)(uiTableModelHandler *, uiTableModel *, int, int, const uiTableValue *);
};
typedef struct uiTable uiTable;
#define uiTable(this) ((uiTable *) (this))