libui.odin


	// uiAttributedStringLength() returns the number of UTF-8 bytes in
	// the textual content of s, excluding the terminating '\0'.
	uiAttributedStringLen :: proc(s: ^uiAttributedString) -> c.size_t ---

	// uiAttributedStringAppendUnattributed() adds the '\0'-terminated
	// UTF-8 string str to the end of s. The new substring will be
	// unattributed.
	uiAttributedStringAppendUnattributed :: proc(s: ^uiAttributedString, str: cstring) ---

	// uiAttributedStringInsertAtUnattributed() adds the '\0'-terminated
	// UTF-8 string str to s at the byte position specified by at. The new
	// substring will be unattributed; existing attributes will be moved
	// along with their text.
	uiAttributedStringInsertAtUnattributed :: proc(s: ^uiAttributedString, str: cstring, at: c.size_t) ---

	// uiAttributedStringDelete() deletes the characters and attributes of
	// s in the byte range [start, end).
	uiAttributedStringDelete :: proc(s: ^uiAttributedString, start: c.size_t, end: c.size_t) ---

	// uiAttributedStringSetAttribute() sets a in the byte range [start, end)
	// of s. Any existing attributes in that byte range of the same type are
	// removed. s takes ownership of a; you should not use it after
	// uiAttributedStringSetAttribute() returns.
	uiAttributedStringSetAttribute :: proc(s: ^uiAttributedString, a: ^uiAttribute, start: c.size_t, end: c.size_t) ---

	// uiAttributedStringForEachAttribute() enumerates all the
	// uiAttributes in s. It is an error to modify s in f. Within f, s still
	// owns the attribute; you can neither free it nor save it for later
	// use.
	// TODO reword the above for consistency (TODO and find out what I meant by that)
	// TODO define an enumeration order (or mark it as undefined); also define how consecutive runs of identical attributes are handled here and sync with the definition of uiAttributedString itself
	uiAttributedStringForEachAttribute :: proc(s: ^uiAttributedString, f: uiAttributedStringForEachAttributeFunc, data: rawptr) ---

	// TODO const correct this somehow (the implementation needs to mutate the structure)
	uiAttributedStringNumGraphemes :: proc(s: ^uiAttributedString) -> c.size_t ---

	// TODO const correct this somehow (the implementation needs to mutate the structure)
	uiAttributedStringByteIndexToGrapheme :: proc(s: ^uiAttributedString, pos: c.size_t) -> c.size_t ---

	// TODO const correct this somehow (the implementation needs to mutate the structure)
	uiAttributedStringGraphemeToByteIndex :: proc(s: ^uiAttributedString, pos: c.size_t) -> c.size_t ---
}

uiFontDescriptor :: struct {
	// TODO const-correct this or figure out how to deal with this when getting a value
	Family:  cstring,
	Size:    f64,
	Weight:  uiTextWeight,
	Italic:  uiTextItalic,
	Stretch: uiTextStretch,
}

uiDrawTextLayout :: struct {}

// uiDrawTextAlign specifies the alignment of lines of text in a
// uiDrawTextLayout.
// TODO should this really have Draw in the name?
uiDrawTextAlign :: u32

uiDrawTextAlignLeft   :: 0
uiDrawTextAlignCenter :: 1
uiDrawTextAlignRight  :: 2

// TODO const-correct this somehow
uiDrawTextLayoutParams :: struct {
	String:      ^uiAttributedString,
	DefaultFont: ^uiFontDescriptor,
	Width:       f64,
	Align:       uiDrawTextAlign,
}

@(default_calling_convention="c")
foreign lib {
	// @role uiDrawTextLayout constructor
	// uiDrawNewTextLayout() creates a new uiDrawTextLayout from
	// the given parameters.
	//
	// TODO
	// - allow creating a layout out of a substring
	// - allow marking compositon strings
	// - allow marking selections, even after creation
	// - add the following functions:
	// 	- uiDrawTextLayoutHeightForWidth() (returns the height that a layout would need to be to display the entire string at a given width)
	// 	- uiDrawTextLayoutRangeForSize() (returns what substring would fit in a given size)
	// 	- uiDrawTextLayoutNewWithHeight() (limits amount of string used by the height)
	// - some function to fix up a range (for text editing)
	uiDrawNewTextLayout :: proc(params: ^uiDrawTextLayoutParams) -> ^uiDrawTextLayout ---

	// @role uiDrawFreeTextLayout destructor
	// uiDrawFreeTextLayout() frees tl. The underlying
	// uiAttributedString is not freed.
	uiDrawFreeTextLayout :: proc(tl: ^uiDrawTextLayout) ---

	// uiDrawText() draws tl in c with the top-left point of tl at (x, y).
	uiDrawText :: proc(_c: ^uiDrawContext, tl: ^uiDrawTextLayout, x: f64, y: f64) ---

	// uiDrawTextLayoutExtents() returns the width and height of tl
	// in width and height. The returned width may be smaller than
	// the width passed into uiDrawNewTextLayout() depending on
	// how the text in tl is wrapped. Therefore, you can use this
	// function to get the actual size of the text layout.
	uiDrawTextLayoutExtents :: proc(tl: ^uiDrawTextLayout, width: ^f64, height: ^f64) ---
}

uiFontButton :: struct {}

@(default_calling_convention="c")
foreign lib {
	// uiFontButtonFont() returns the font currently selected in the uiFontButton in desc.
	// uiFontButtonFont() allocates resources in desc; when you are done with the font, call uiFreeFontButtonFont() to release them.
	// uiFontButtonFont() does not allocate desc itself; you must do so.
	// TODO have a function that sets an entire font descriptor to a range in a uiAttributedString at once, for SetFont?
	uiFontButtonFont :: proc(b: ^uiFontButton, desc: ^uiFontDescriptor) ---

	// TOOD SetFont, mechanics
	// uiFontButtonOnChanged() sets the function that is called when the font in the uiFontButton is changed.
	uiFontButtonOnChanged :: proc(b: ^uiFontButton, f: proc "c" (^uiFontButton, rawptr), data: rawptr) ---

	// uiNewFontButton() creates a new uiFontButton. The default font selected into the uiFontButton is OS-defined.
	uiNewFontButton :: proc() -> ^uiFontButton ---

	// uiFreeFontButtonFont() frees resources allocated in desc by uiFontButtonFont().
	// After calling uiFreeFontButtonFont(), the contents of desc should be assumed to be undefined (though since you allocate desc itself, you can safely reuse desc for other font descriptors).
	// Calling uiFreeFontButtonFont() on a uiFontDescriptor not returned by uiFontButtonFont() results in undefined behavior.
	uiFreeFontButtonFont :: proc(desc: ^uiFontDescriptor) ---
}

uiModifiers :: u32

uiModifierCtrl  :: 1
uiModifierAlt   :: 2
uiModifierSuper :: 8
uiModifierShift :: 4

// TODO document drag captures
uiAreaMouseEvent :: struct {
	// TODO document what these mean for scrolling areas
	X: f64,
	Y: f64,

	// TODO see draw above
	AreaWidth:  f64,
	AreaHeight: f64,
	Down:       i32,
	Up:         i32,
	Count:      i32,
	Modifiers:  uiModifiers,
	Held1To64:  u64,
}

uiExtKeyInsert :: 2
uiExtKeyDelete :: 3
uiExtKeyHome   :: 4

uiExtKey :: u32

uiExtKeyPageUp    :: 6
uiExtKeyPageDown  :: 7
uiExtKeyUp        :: 8
uiExtKeyDown      :: 9
uiExtKeyLeft      :: 10
uiExtKeyEscape    :: 1
uiExtKeyF1        :: 12
uiExtKeyF2        :: 13
uiExtKeyF3        :: 14
uiExtKeyF4        :: 15
uiExtKeyF5        :: 16
uiExtKeyF6        :: 17
uiExtKeyF7        :: 18
uiExtKeyF8        :: 19
uiExtKeyF9        :: 20
uiExtKeyEnd       :: 5
uiExtKeyF11       :: 22
uiExtKeyF12       :: 23
uiExtKeyN0        :: 24
uiExtKeyN1        :: 25
uiExtKeyN2        :: 26
uiExtKeyN3        :: 27
uiExtKeyN4        :: 28
uiExtKeyN5        :: 29
uiExtKeyN6        :: 30
uiExtKeyN7        :: 31
uiExtKeyN8        :: 32
uiExtKeyN9        :: 33
uiExtKeyNDot      :: 34
uiExtKeyNEnter    :: 35
uiExtKeyNAdd      :: 36
uiExtKeyRight     :: 11
uiExtKeyF10       :: 21
uiExtKeyNSubtract :: 37
uiExtKeyNDivide   :: 39
uiExtKeyNMultiply :: 38

uiAreaKeyEvent :: struct {
	Key:       i8,
	ExtKey:    uiExtKey,
	Modifier:  uiModifiers,
	Modifiers: uiModifiers,
	Up:        i32,
}

uiColorButton :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiColorButtonColor     :: proc(b: ^uiColorButton, r: ^f64, g: ^f64, bl: ^f64, a: ^f64) ---
	uiColorButtonSetColor  :: proc(b: ^uiColorButton, r: f64, g: f64, bl: f64, a: f64) ---
	uiColorButtonOnChanged :: proc(b: ^uiColorButton, f: proc "c" (^uiColorButton, rawptr), data: rawptr) ---
	uiNewColorButton       :: proc() -> ^uiColorButton ---
}

uiForm :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiFormAppend    :: proc(f: ^uiForm, label: cstring, _c: ^uiControl, stretchy: i32) ---
	uiFormDelete    :: proc(f: ^uiForm, index: i32) ---
	uiFormPadded    :: proc(f: ^uiForm) -> i32 ---
	uiFormSetPadded :: proc(f: ^uiForm, padded: i32) ---
	uiNewForm       :: proc() -> ^uiForm ---
}

uiAlignStart :: 1

uiAlign :: u32

uiAlignFill   :: 0
uiAlignCenter :: 2
uiAlignEnd    :: 3

uiAt :: u32

uiAtLeading  :: 0
uiAtTop      :: 1
uiAtTrailing :: 2
uiAtBottom   :: 3

uiGrid :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiGridAppend    :: proc(g: ^uiGrid, _c: ^uiControl, left: i32, top: i32, xspan: i32, yspan: i32, hexpand: i32, halign: uiAlign, vexpand: i32, valign: uiAlign) ---
	uiGridInsertAt  :: proc(g: ^uiGrid, _c: ^uiControl, existing: ^uiControl, at: uiAt, xspan: i32, yspan: i32, hexpand: i32, halign: uiAlign, vexpand: i32, valign: uiAlign) ---
	uiGridPadded    :: proc(g: ^uiGrid) -> i32 ---
	uiGridSetPadded :: proc(g: ^uiGrid, padded: i32) ---
	uiNewGrid       :: proc() -> ^uiGrid ---
}

uiImage :: struct {}

@(default_calling_convention="c")
foreign lib {
	// @role uiImage constructor
	// uiNewImage creates a new uiImage with the given width and
	// height. This width and height should be the size in points of the
	// image in the device-independent case; typically this is the 1x size.
	// TODO for all uiImage functions: use const void * for const correctness
	uiNewImage :: proc(width: f64, height: f64) -> ^uiImage ---

	// @role uiImage destructor
	// uiFreeImage frees the given image and all associated resources.
	uiFreeImage :: proc(i: ^uiImage) ---

	// uiImageAppend adds a representation to the uiImage.
	// pixels should point to a byte array of premultiplied pixels
	// stored in [R G B A] order (so ((uint8_t *) pixels)[0] is the R of the
	// first pixel and [3] is the A of the first pixel). pixelWidth and
	// pixelHeight is the size *in pixels* of the image, and pixelStride is
	// the number *of bytes* per row of the pixels array. Therefore,
	// pixels itself must be at least byteStride * pixelHeight bytes long.
	// TODO see if we either need the stride or can provide a way to get the OS-preferred stride (in cairo we do)
	uiImageAppend :: proc(i: ^uiImage, pixels: rawptr, pixelWidth: i32, pixelHeight: i32, byteStride: i32) ---
}

uiTableValue :: struct {}

@(default_calling_convention="c")
foreign lib {
	// @role uiTableValue destructor
	// uiFreeTableValue() frees a uiTableValue. You generally do not
	// need to call this yourself, as uiTable and uiTableModel do this
	// for you. In fact, it is an error to call this function on a uiTableValue
	// that has been given to a uiTable or uiTableModel. You can call this,
	// however, if you created a uiTableValue that you aren't going to
	// use later, or if you called a uiTableModelHandler method directly
	// and thus never transferred ownership of the uiTableValue.
	uiFreeTableValue :: proc(v: ^uiTableValue) ---
}

// uiTableValueType holds the possible uiTableValue types that may
// be returned by uiTableValueGetType(). Refer to the documentation
// for each type's constructor function for details on each type.
// TODO actually validate these
uiTableValueType :: u32

uiTableValueTypeString :: 0
uiTableValueTypeInt    :: 2
uiTableValueTypeImage  :: 1
uiTableValueTypeColor  :: 3

@(default_calling_convention="c")
foreign lib {
	// uiTableValueGetType() returns the type of v.
	// TODO I don't like this name
	uiTableValueGetType :: proc(v: ^uiTableValue) -> uiTableValueType ---
